@@ -1,5 +1,9 @@
 2007-08-06  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/lcms.c (run): simplified.
+
+2007-08-06  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/svg.c (load_rsvg_pixbuf): set the base URI so
 	that librsvg can resolve relative paths.
 
